# DatabricksGenieBOT

./: .dockerignore  .gitignore  ARCHITECTURE_OPTIMIZATION_GUIDE.md  CHART_FEATURE_GUIDE.md  CLAUDE.md  CODE_REVIEW.md  CODE_REVIEW_OPTIMIZATION.md  DEPLOYMENT_SUMMARY.md  Dockerfile  ENV_CONFIGURATION.md  FIXES_SUMMARY.md  FRAMEWORK_COMPARISON.md  GITHUB_PUSH_PROTECTION_FIX.md  GRAPH_API_CARD_GUIDE.md  GRAPH_API_OAUTH_TROUBLESHOOTING.md  GRAPH_API_QUICK_REFERENCE.md  GRAPH_API_SETUP.md  HEALTH_CHECK_SETUP.md  KALEIDO_CHROME_TROUBLESHOOTING.md  LOGGING_QUICK_REFERENCE.md  LOGGING_TROUBLESHOOTING.md  MANIFEST_GUIDE.md  MIGRATION_COMPLETED.md  MIGRATION_MATPLOTLIB.md  OPTIMIZATION.md  OPTIMIZATION_APPLIED.md  OPTIMIZATION_COMPARISON.md  OPTIMIZATION_EXECUTIVE_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  QUICK_OPTIMIZATION_GUIDE.md  QUICK_START.md  README.md  TEAMS_DEPLOYMENT.md  TROUBLESHOOTING.md  app.py  chart_generator.py  cleanup_git_history.sh  command_handler.py  config.py  diagnose.py  (+16 more)
.claude/: settings.json
app/: __init__.py  bot_instance.py  main.py
docs/: M365_SETUP.md  agent_skills_development_plan.md  application_insights_integration.md  architecture_diagram.md  authentication.md  bot_framework_migration.md  environment_migration.md  m365_agent_framework.md  m365_agents_sdk_evaluation_report.md  m365_agents_sdk_poc_plan.md  m365_removal_summary.md  sso_status_and_fix.md  sso_token_analysis.md  troubleshooting.md
migration_archive/: AUTHENTICATION_SKILL_VERIFICATION_REPORT.md  COMMAND_IDENTITY_SKILLS_REPORT.md  FRAMEWORK_INTEGRATION_REPORT.md  IMPLEMENTATION_CHECKLIST.md  M365_INTEGRATION_SUMMARY.md  M365_QUICK_REFERENCE.py  MIGRATION_EXECUTION_PLAN.md  MIGRATION_IMPLEMENTATION_SUMMARY.md  MIGRATION_OVERVIEW.md  MIGRATION_PROGRESS_REPORT.md  MIGRATION_PROGRESS_TRACKING.md  MIGRATION_QUICK_REFERENCE.md  MIGRATION_QUICK_START.md  MIGRATION_SKILL_GUIDE.md  MIGRATION_STATUS_SUMMARY.md  MIGRATION_SUMMARY.txt  PROJECT_COMPLETION_REPORT.md  migration_analysis.json  migration_implementation.py  migration_utils.py  run_migration_analysis.py  verify_authentication_skill.py
scripts/: diagnose.py
tests/: test_auth_skill_core.py  test_authentication_quick_verify.py  test_bot_core_skill.py  test_command_skill.py  test_environment.py  test_full_integration.py  (+2 more)
(+132 files in other folders)
